--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,10 +7,16 @@ spring.datasource.password=
 spring.datasource.sql-script-encoding=UTF-8
 spring.datasource.initialize=true
 spring.datasource.schema=classpath:schema.sql
-spring.datasource.data=classpath:data.sql
+#spring.datasource.data=classpath:data.sql
 #H2DB
 spring.h2.console.enabled=true
 #message
 spring.messages.basename=i18n/messages, i18n/ValidationMessages
 spring.messages.cache-duration=-1
 spring.messages.encoding=UTF-8
+#MyBatis
+mybatis.mapper-locations=classpath*:/mapper/h2/*.xml
+mybatis.configuration.map-underscore-to-camel-case=true
+mybatis.type-aliases-package=com.example.demo.domain.user.model
+#LogLevel
+logging.level.com.example=debug
