--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,8 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.sql-script-encoding=UTF-8
-spring.datasource.initialize=true
+spring.datasource.initialize=false
 spring.datasource.schema=classpath:schema.sql
-#spring.datasource.data=classpath:data.sql
 #H2DB
 spring.h2.console.enabled=true
 #message
