[add]投稿の削除・編集機能の追加

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 
 #DataSource 
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.data-source-class-name=org.h2.Driver
+spring.datasource.url=jdbc:h2:~/Applications/Eclipse_2021-12.app/Contents/workspace/DiaryApp/db/demodb.mb.db
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.sql-script-encoding=UTF-8
 spring.datasource.initialize=false
-spring.datasource.schema=classpath:schema.sql
+
 #H2DB
 spring.h2.console.enabled=true
 #message
