--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 #DataSource 
 spring.datasource.data-source-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:~/Applications/Eclipse_2021-12.app/Contents/workspace/DiaryApp/db/demodb.mb.db
+spring.datasource.url=jdbc:h2:~/Applications/Eclipse_2021-12.app/Contents/workspace/DiaryApp/db/demodb.mv.db
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
